# mineracao_processos

./: LICENSE  README.md  cluster.ipynb  pyproject.toml
